--- a/jenkins/jenkins_deployment.yaml
+++ b/jenkins/jenkins_deployment.yaml
@@ -16,6 +16,9 @@ spec:
       containers:
       - name: jenkins
         image: jenkins/jenkins:latest
+        env:
+            - name: JAVA_OPTS
+              value: -Djenkins.install.runSetupWizard=false
         ports:
         - containerPort: 8080
 
