--- a/jenkins/jenkins_deployment.yaml
+++ b/jenkins/jenkins_deployment.yaml
@@ -21,4 +21,24 @@ spec:
               value: -Djenkins.install.runSetupWizard=false
         ports:
         - containerPort: 8080
+        
+apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
+kind: Deployment
+metadata:
+  name: sonarqube-deployment
+spec:
+  selector:
+    matchLabels:
+      app: sonarqube
+  replicas: 1 # tells deployment to run 2 pods matching the template
+  template:
+    metadata:
+      labels:
+        app: sonarqube
+    spec:
+      containers:
+      - name: sonarqube
+        image: sonarqube
+        ports:
+        - containerPort: 8080
 
