--- a/argo/Deployment.yaml
+++ b/argo/Deployment.yaml
@@ -1,16 +1,10 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Workflow                  # new type of k8s spec
+apiVersion: v1
+kind: ConfigMap
 metadata:
-  generateName: hello-world-    # name of the workflow spec
-spec:
-  entrypoint: whalesay          # invoke the whalesay template
-  templates:
-  - name: whalesay              # name of the template
-    container:
-      image: docker/whalesay
-      command: [cowsay]
-      args: ["hello world"]
-      resources:                # limit the resources
-        limits:
-          memory: 32Mi
-          cpu: 100m
+  name: argocd-cm
+  namespace: argocd
+  labels:
+    app.kubernetes.io/name: argocd-cm
+    app.kubernetes.io/part-of: argocd
+data:
+    kustomize.buildOptions: --load_restrictor none
