--- a/test/rsvp.yaml
+++ b/test/rsvp.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: rsvp-app
-        image: nkhare/rsvpapp: dev
+        image: nkhare/rsvpapp:1bd81b11a8f42f5da9769bb0716b2624b65c8c06
         imagePullPolicy: Always
         livenessProbe:
           httpGet:
@@ -29,5 +29,56 @@ spec:
         ports:
         - containerPort: 5000
           name: web-port
-. . .
-
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: rsvp
+  labels:
+    app: rsvp
+spec:
+  type: NodePort
+  ports:
+  - port: 80
+    targetPort: web-port
+    protocol: TCP
+  selector:
+    app: rsvp
+    
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: rsvp-db
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      appdb: rsvpdb
+  template:
+    metadata:
+      labels:
+        appdb: rsvpdb
+    spec:
+      containers:
+      - name: rsvpd-db
+        image: mongo:3.3
+        env:
+        - name: MONGODB_DATABASE
+          value: rsvpdata
+        ports:
+        - containerPort: 27017
+        
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mongodb
+  labels:
+    app: rsvpdb
+spec:
+  ports:
+  - port: 27017
+    protocol: TCP
+  selector:
+    appdb: rsvpdb
