--- a/test/rsvp.yaml
+++ b/test/rsvp.yaml
@@ -1,84 +1,69 @@
-apiVersion: apps/v1
+apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
 metadata:
-  name: rsvp
+  name: jenkins-deployment
 spec:
-  replicas: 2
   selector:
     matchLabels:
-      app: rsvp
+      app: jenkins
+  replicas: 1 # tells deployment to run 2 pods matching the template
   template:
     metadata:
       labels:
-        app: rsvp
+        app: jenkins
     spec:
       containers:
-      - name: rsvp-app
-        image: nkhare/rsvpapp:1bd81b11a8f42f5da9769bb0716b2624b65c8c06
-        imagePullPolicy: Always
-        livenessProbe:
-          httpGet:
-            path: /
-            port: 5000
-          periodSeconds: 30
-          timeoutSeconds: 1
-          initialDelaySeconds: 50
+      - name: jenkins
+        image: jenkins/jenkins:latest
         env:
-        - name: MONGODB_HOST
-          value: mongodb
+            - name: JAVA_OPTS
+              value: -Djenkins.install.runSetupWizard=false
         ports:
-        - containerPort: 5000
-          name: web-port
+        - containerPort: 8080
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: rsvp
-  labels:
-    app: rsvp
+  name: jenkins
 spec:
   type: NodePort
   ports:
-  - port: 80
-    targetPort: web-port
-    protocol: TCP
+    - port: 8080
+      targetPort: 8080
+      nodePort: 30000
   selector:
-    app: rsvp
-    
+    app: jenkins
 ---
-apiVersion: apps/v1
+apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
 metadata:
-  name: rsvp-db
+  name: nexus-deployment
 spec:
-  replicas: 1
   selector:
     matchLabels:
-      appdb: rsvpdb
+      app: nexus
+  replicas: 1 # tells deployment to run 2 pods matching the template
   template:
     metadata:
       labels:
-        appdb: rsvpdb
+        app: nexus
     spec:
       containers:
-      - name: rsvpd-db
-        image: mongo:3.3
-        env:
-        - name: MONGODB_DATABASE
-          value: rsvpdata
+      - name: nexus
+        image: sonatype/nexus3:latest
         ports:
-        - containerPort: 27017
-        
+        - containerPort: 8081
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: mongodb
-  labels:
-    app: rsvpdb
+  name: nexus
 spec:
+  type: NodePort
   ports:
-  - port: 27017
-    protocol: TCP
+    - port: 8081
+      targetPort: 8081
+      nodePort: 30001
   selector:
-    appdb: rsvpdb
+    app: nexus
+---
