--- a/test/deployment_service.yaml
+++ b/test/deployment_service.yaml
@@ -66,3 +66,37 @@ spec:
       nodePort: 30010
   selector:
     app: nexus
+---
+apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
+kind: Deployment
+metadata:
+  name: sonarqube-deployment
+spec:
+  selector:
+    matchLabels:
+      app: sonarqube
+  replicas: 1 # tells deployment to run 2 pods matching the template
+  template:
+    metadata:
+      labels:
+        app: sonarqube
+    spec:
+      containers:
+      - name: sonarqube
+        image: sonarqube:latest
+        ports:
+        - containerPort: 9000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: sonarqube
+spec:
+  type: NodePort
+  ports:
+    - port: 9000
+      targetPort: 9000
+      nodePort: 30020
+  selector:
+    app: sonarqube
+
