--- a/test/deployment_service.yaml
+++ b/test/deployment_service.yaml
@@ -99,4 +99,38 @@ spec:
       nodePort: 30020
   selector:
     app: sonarqube
+---
+apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
+kind: Deployment
+metadata:
+  name: gitlab-deployment
+spec:
+  selector:
+    matchLabels:
+      app: gitlab
+  replicas: 1 # tells deployment to run 2 pods matching the template
+  template:
+    metadata:
+      labels:
+        app: gitlab
+    spec:
+      containers:
+      - name: gitlab
+        image: gitlab/gitlab-ce:latest
+        ports:
+        - containerPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: gitlab
+spec:
+  type: NodePort
+  ports:
+    - port: 80
+      targetPort: 80
+      nodePort: 30030
+  selector:
+    app: gitlab
+
 
