--- a/test/deployment_service.yaml
+++ b/test/deployment_service.yaml
@@ -35,6 +35,13 @@ spec:
   selector:
     app: jenkins-deployment
 ---
+kind: StorageClass
+apiVersion: storage.k8s.io/v1
+metadata:
+  name: local-storage
+provisioner: kubernetes.io/no-provisioner
+volumeBindingMode: WaitForFirstConsumer
+---
 apiVersion: v1
 kind: PersistentVolume
 metadata:
