--- a/test/deployment_service.yaml
+++ b/test/deployment_service.yaml
@@ -46,13 +46,12 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: jenkins-pv
-  namespace: argocd 
 spec:
   capacity:
-    storage: 8Gi
+    storage: 1Gi
   accessModes:
   - ReadWriteOnce
-  persistentVolumeReclaimPolicy: Delete
+  persistentVolumeReclaimPolicy: Retain
   storageClassName: local-storage
   local:
     path: /home/ubuntu/Desktop/jenkins
@@ -63,7 +62,7 @@ spec:
         - key: kubernetes.io/hostname
           operator: In
           values:
-          - example-node
+          - kubernetes-server
 ---
 apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
