--- a/test/deployment_service.yaml
+++ b/test/deployment_service.yaml
@@ -20,6 +20,12 @@ spec:
               value: -Djenkins.install.runSetupWizard=false
         ports:
         - containerPort: 8080
+        volumeMounts:
+        - name: jenkins-pv
+          mountPath: /var/jenkins_home
+      volumes:
+        - name: jenkins-pv-claims
+          emptyDir: {}
 
 ---
 apiVersion: v1
